# TankCommanderPanic

./: .gitignore  README.md  build.sh
client/: battlefield.py  client.py  const.py  fonthandler.py  game.py  gamepiece.py  gamestate.py  hud.py  import_tmx.py  inputhandler.py  messagehandler.py  messagehandler_test.py  protocol.py  texturehandler.py
design/: message_format_details.md  oo_design.uxf  panic_game_protocol.md
doc/: map_file_format.md  panic_game_protocol.md
graphics_src/: palette.xcf  palette_hud.xcf  palette_tanks.xcf  testmap.tmx
include/: spool.hpp
map_gen/: map_gen.py
server/: CMakeLists.txt  actionmessage.cpp  actionmessage.hpp  actionmessagehandle.cpp  actionmessagehandle.hpp  async_tcp.cpp  async_tcp.hpp  async_udp.cpp  async_udp.hpp  createpiecemessagehandle.cpp  createpiecemessagehandle.hpp  eventmessagehandle.cpp  eventmessagehandle.hpp  gamedriver.cpp  gamedriver.hpp  gamestatemessage.cpp  gamestatemessage.hpp  main.cpp  message.hpp  messageenvelope.hpp  messagespool.hpp  playerclient.cpp  playerclient.hpp  playerclientlist.cpp  playerclientlist.hpp  protocoldefs.hpp  protocolerror.hpp  protocolfields.hpp  server.cpp  server.hpp  servermessagehandle.hpp  simple_servers.cpp  simple_servers.hpp
server/game_model/: gamemodel.cpp  gamemodel.hpp  gamemodelerror.hpp  gamepiece.cpp  gamepiece.hpp  gameplayer.cpp  gameplayer.hpp  maplist.hpp  solidpiece.cpp  solidpiece.hpp  tankpiece.cpp  tankpiece.hpp  tile.cpp  tile.hpp
server/include/: char_array.hpp  serialize.hpp  spool.hpp
server/protocol/: actionmessagehandle.cpp  createpiecemessagehandle.cpp  createpiecemessagehandle.hpp  eventmessagehandle.cpp  eventmessagehandle.hpp  gamestatemessage.cpp  gamestatemessage.hpp  message.hpp  protocol_serialization.cpp  protocoldefs.hpp  servermessagehandle.cpp  servermessagehandle.hpp
udp_client_cpp/: CMakeLists.txt  FindThread.cmake  main.cpp
(+13 files in other folders)
