project(server)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_definitions(-std=c++14)
include_directories("./include")
find_package( Boost 1.56 COMPONENTS system filesystem REQUIRED )
add_executable(${PROJECT_NAME} ${SRC_LIST} game_model/gamemodel.hpp game_model/gamemodel.cpp game_model/tile.cpp game_model/tile.hpp game_model/gamepiece.cpp game_model/gamepiece.hpp)
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} pthread)
