project(server)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_definitions(-std=c++14)
include_directories("./include" "./game_model")
find_package( Boost 1.56 COMPONENTS system filesystem REQUIRED )
add_executable(${PROJECT_NAME} ${SRC_LIST} game_model/solidpiece.cpp game_model/solidpiece.hpp game_model/tankpiece.cpp game_model/tankpiece.hpp)
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} pthread)
