project(server)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
aux_source_directory(game_model GAME_MODEL_LIST)
aux_source_directory(protocol PROTOCOL_LIST)
add_definitions(-std=c++14)
include_directories("./include")
find_package( Boost 1.56 COMPONENTS system filesystem REQUIRED )
add_executable(${PROJECT_NAME} ${SRC_LIST} ${GAME_MODEL_LIST} ${PROTOCOL_LIST})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} pthread)
