project(udp_client_cpp)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_definitions("-std=c++14")
find_package (Threads)
find_package( Boost 1.56 COMPONENTS system REQUIRED )
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} )
